--- a/FasterRCNN/requirements.txt
+++ b/FasterRCNN/requirements.txt
@@ -1,3 +1,5 @@
+Cython==0.29.15
+numpy==1.17.5
 absl-py==0.9.0
 appnope==0.1.0
 astor==0.8.1
@@ -5,7 +7,6 @@ attrs==19.3.0
 backcall==0.1.0
 bleach==3.1.0
 cycler==0.10.0
-Cython==0.29.15
 decorator==4.4.1
 defusedxml==0.6.0
 easydict==1.9
@@ -36,7 +37,6 @@ mistune==0.8.4
 nbconvert==5.6.1
 nbformat==5.0.4
 notebook==6.0.3
-numpy==1.17.5
 opt-einsum==3.1.0
 pandocfilters==1.4.2
 parso==0.6.1
@@ -57,7 +57,7 @@ qtconsole==4.6.0
 Send2Trash==1.5.0
 six==1.14.0
 tensorboard==1.15.0
-tensorflow==1.15.2
+tensorflow-gpu==1.15.2
 tensorflow-estimator==1.15.1
 termcolor==1.1.0
 terminado==0.8.3
